--- a/package.json
+++ b/package.json
@@ -3,14 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev --port 3100 --turbopack",
     "build": "next build",
-    "start": "next start",
+    "start": "next start --port 3100",
     "lint": "next lint"
   },
   "dependencies": {
     "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-toast": "^1.2.2",
     "@tailwindcss/typography": "^0.5.15",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -19,6 +20,7 @@
     "eslint-plugin-tailwindcss": "^3.17.5",
     "lucide-react": "^0.460.0",
     "next": "15.0.3",
+    "next-auth": "^5.0.0-beta.25",
     "next-themes": "^0.4.3",
     "prettier": "^3.3.3",
     "react": "19.0.0-rc-66855b96-20241106",
@@ -35,5 +37,10 @@
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
+  },
+  "packageManager": "npm@10.7.10",
+  "overrides": {
+    "react": "$react",
+    "react-dom": "$react-dom"
   }
 }
