--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "next": "15.0.3",
     "next-auth": "^5.0.0-beta.25",
     "next-themes": "^0.4.3",
+    "nextjs-toploader": "^3.8.16",
     "pino": "^9.6.0",
     "pino-pretty": "^13.0.0",
     "prettier": "^3.3.3",
