--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@radix-ui/react-toast": "^1.2.2",
     "@tailwindcss/typography": "^0.5.15",
     "bcryptjs": "^3.0.2",
+    "bright": "^1.0.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cm6-theme-basic-dark": "^0.2.0",
@@ -28,6 +29,7 @@
     "mongoose": "^8.9.5",
     "next": "15.0.3",
     "next-auth": "^5.0.0-beta.25",
+    "next-mdx-remote": "^5.0.0",
     "next-themes": "^0.4.3",
     "nextjs-toploader": "^3.8.16",
     "pino": "^9.6.0",
